Add product management functionality
This commit introduces the following changes:

- Update "app.js" to introduce product management functionality
- Refactor `ProductEditForm.js`, `ProductForm.js`, and `ProductData.js` for improved functionality and organization

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes glow {
+  0% {
+    box-shadow: 0 0 10px 0 rgba(35, 105, 197, 0.75);
+  }
+  50% {
+    box-shadow: 0 0 20px 3px rgba(35, 105, 197, 0.75);
+  }
+  100% {
+    box-shadow: 0 0 10px 0 rgba(35, 105, 197, 0.75);
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.special-item {
+  animation: glow 1s infinite alternate;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
